--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "bugs": {
         "url": "https://github.com/ronyeh/music/issues"
     },
-    "homepage": "https://github.com/ronyeh/music#readme"
+    "homepage": "https://github.com/ronyeh/music#readme",
+    "dependencies": {
+        "esbuild": "^0.14.42"
+    }
 }
